# macrodeck

./: .gitignore  README.md  __main__.py  macrod.py  requirements.txt  setup.cfg  setup.py
macrodeck/: data.py  macrodeck.py
macrodeck/assets/: README.md
macrodeck/assets/icons/: README.md
macrodeck/assets/profiles/: README.md  autodesk-eagle.json  empty-profile.json
macrodeck/profile/: action.py  deck.py  icon.py  key.py  profile.py  window.py
