[metadata]
description = Use an Elgato Stream Deck as a context-sensitive macro keypad
author = Aki Van Ness
author_email = 201479+lethalbit@users.noreply.github.com
url = https://github.com/lethalbit/macrodeck
keywords =
	Elgato Stream Deck
	Stream Deck
	Macros
license = BSD-3-Clause
license_file = LICENSE
classifiers =
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	Intended Audience :: End Users/Desktop
	Environment :: X11 Applications
	License :: OSI Approved :: BSD License
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

	Topic :: Desktop Environment :: Window Managers :: i3
	Topic :: Utilities

	Development Status :: 3 - Alpha

long_description = MacroDeck is a program to enable any Elgato Stream Deck to act as a highly configurable context-sensitve macro keypad for productivty

[options]
python_requires = >= 3.6.0
